# NL2SQL

./: .gitignore  implementation_gap_analysis.md  main.py  pyproject.toml
deepeye/: checkers.py  core.py  generators.py  schema_linking.py  selection.py  utils.py
